--- a/template/index.html
+++ b/template/index.html
@@ -1,6 +1,13 @@
 <div class="container">
     <div class="row navbar-default">
-        <div class="navbar-header"><h1><a href="/">Brand</a></h1></div>
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">Brand</a></div>
         <div class="collapse navbar-collapse"><f:format.html parseFuncTSPath="">{main}</f:format.html></div>
     </div>
     <div class="row">
