--- a/template/index.html
+++ b/template/index.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row navbar-default">
+    <div class="navbar-default">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
