--- a/template/partials/footer.html
+++ b/template/partials/footer.html
@@ -1,7 +1,7 @@
-<div class="footer-page">
+<footer>
     <div class="container">
         <div class="row">
             <f:format.html parseFuncTSPath="">{footer}</f:format.html>
         </div>
     </div>
-</div>
+</footer>
